# RustyKaraoke

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: book.toml
docs/src/: 2.1_ncn_format.md  SUMMARY.md
src/: emk.rs  karaoke.rs  main.rs  midi.rs  ncn.rs  ncn_reader.rs  tick.rs  time.rs
src/ui/: mod.rs  piano.rs
