[package]
name = "rusty-karaoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
encoding = "0.2.33"
log = "0.4.17"
midly = "0.5.2"
pretty_env_logger = "0.4.0"
nodi = "0.19.2"
# would add SF3 support but it brokey
oxisynth = { version = "0.0.2", features = [] }
cpal = { version = "0.14.1", features = ["jack"] }
fluidlite = { version = "0.2.1", features = ["log", "builtin"] }
parking_lot = "0.12.1"
tokio = { version = "1.22.0", features = ["full"] }
async-trait = "0.1.58"
chrono = "0.4.23"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
