[package]
name = "rusty-karaoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui = { version = "0.19.0", features = ["deadlock_detection", "persistence"] }
encoding = "0.2.33"
log = "0.4.17"
midly = "0.5.2"
pretty_env_logger = "0.4.0"
nodi = "0.19.2"
# would add SF3 support but it brokey
oxisynth = { version = "0.0.2", features = [] }
cpal = { version = "0.14.1", features = ["jack"] }
fluidlite = { version = "0.2.1", features = ["log", "builtin"] }
parking_lot = {version = "0.12.1", features= ["deadlock_detection"]}
tokio = { version = "1.22.0", features = ["full"] }
async-trait = "0.1.58"
chrono = "0.4.23"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
hhmmss = "0.1.0"
derivative = "2.2.0"
lazy_static = "1.4.0"
anyhow = "1.0.66"
native-dialog = "0.6.3"
rayon = "1.6.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
flate2 = "1.0.25"
md-5 = "0.10.5"
